packages/flutterxel/src/flutterxel.h

FFI_PLUGIN_EXPORT bool flutterxel_core_rect(int32_t x,
                                             int32_t y,
                                             int32_t w,
                                             int32_t h,
                                             int32_t col);
FFI_PLUGIN_EXPORT bool flutterxel_core_rectb(int32_t x,
                                              int32_t y,
                                              int32_t w,
                                              int32_t h,
                                              int32_t col);
FFI_PLUGIN_EXPORT bool flutterxel_core_circ(int32_t x,
                                             int32_t y,
                                             int32_t r,
                                             int32_t col);
FFI_PLUGIN_EXPORT bool flutterxel_core_circb(int32_t x,
                                              int32_t y,
                                              int32_t r,
                                              int32_t col);
FFI_PLUGIN_EXPORT bool flutterxel_core_elli(int32_t x,
                                             int32_t y,
                                             int32_t w,
                                             int32_t h,
                                             int32_t col);
FFI_PLUGIN_EXPORT bool flutterxel_core_ellib(int32_t x,
                                              int32_t y,
                                              int32_t w,
                                              int32_t h,
                                              int32_t col);
FFI_PLUGIN_EXPORT bool flutterxel_core_tri(int32_t x1,
                                            int32_t y1,
                                            int32_t x2,
                                            int32_t y2,
                                            int32_t x3,
                                            int32_t y3,
                                            int32_t col);
FFI_PLUGIN_EXPORT bool flutterxel_core_trib(int32_t x1,
                                             int32_t y1,
                                             int32_t x2,
                                             int32_t y2,
                                             int32_t x3,
                                             int32_t y3,
                                             int32_t col);
FFI_PLUGIN_EXPORT bool flutterxel_core_fill(int32_t x, int32_t y, int32_t col);
FFI_PLUGIN_EXPORT bool flutterxel_core_text(int32_t x,
                                             int32_t y,
                                             const char* text,
                                             int32_t col);
FFI_PLUGIN_EXPORT bool flutterxel_core_bltm(double x,
                                             double y,
                                             int32_t tm,
                                             double u,
                                             double v,
                                             double w,
                                             double h,
                                             int32_t colkey);
FFI_PLUGIN_EXPORT bool flutterxel_core_blt(
    double x,
    double y,
    int32_t img,
    double u,
    double v,
    double w,
    double h,
    int32_t colkey,
    double rotate,
    double scale);
FFI_PLUGIN_EXPORT bool flutterxel_core_play(
    int32_t ch,
    int32_t snd_kind,
    int32_t snd_value,
    const int32_t* snd_sequence_ptr,
    size_t snd_sequence_len,
    const char* snd_string,
    double sec,
    int8_t loop,
    int8_t resume);
FFI_PLUGIN_EXPORT bool flutterxel_core_playm(int32_t msc, bool loop);
FFI_PLUGIN_EXPORT bool flutterxel_core_stop(int32_t ch);
FFI_PLUGIN_EXPORT bool flutterxel_core_is_channel_playing(int32_t ch);
FFI_PLUGIN_EXPORT bool flutterxel_core_play_pos(int32_t ch,
                                                 int32_t* snd,
                                                 double* pos);
FFI_PLUGIN_EXPORT bool flutterxel_core_rseed(int32_t seed);
FFI_PLUGIN_EXPORT int32_t flutterxel_core_rndi(int32_t a, int32_t b);
FFI_PLUGIN_EXPORT double flutterxel_core_rndf(double a, double b);
FFI_PLUGIN_EXPORT bool flutterxel_core_nseed(int32_t seed);
FFI_PLUGIN_EXPORT double flutterxel_core_noise(double x, double y, double z);
FFI_PLUGIN_EXPORT bool flutterxel_core_load(
    const char* filename,
    int8_t exclude_images,
    int8_t exclude_tilemaps,
    int8_t exclude_sounds,
    int8_t exclude_musics);