packages/flutterxel/lib/flutterxel_bindings_generated.dart


  bool flutterxel_core_rect(int x, int y, int w, int h, int col) {
    return _flutterxel_core_rect(x, y, w, h, col);
  }

  late final _flutterxel_core_rectPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Bool Function(
            ffi.Int32,
            ffi.Int32,
            ffi.Int32,
            ffi.Int32,
            ffi.Int32,
          )
        >
      >('flutterxel_core_rect');
  late final _flutterxel_core_rect = _flutterxel_core_rectPtr
      .asFunction<bool Function(int, int, int, int, int)>();

  bool flutterxel_core_rectb(int x, int y, int w, int h, int col) {
    return _flutterxel_core_rectb(x, y, w, h, col);
  }

  late final _flutterxel_core_rectbPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Bool Function(
            ffi.Int32,
            ffi.Int32,
            ffi.Int32,
            ffi.Int32,
            ffi.Int32,
          )
        >
      >('flutterxel_core_rectb');
  late final _flutterxel_core_rectb = _flutterxel_core_rectbPtr
      .asFunction<bool Function(int, int, int, int, int)>();

  bool flutterxel_core_circ(int x, int y, int r, int col) {
    return _flutterxel_core_circ(x, y, r, col);
  }

  late final _flutterxel_core_circPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Bool Function(ffi.Int32, ffi.Int32, ffi.Int32, ffi.Int32)
        >
      >('flutterxel_core_circ');
  late final _flutterxel_core_circ = _flutterxel_core_circPtr
      .asFunction<bool Function(int, int, int, int)>();

  bool flutterxel_core_circb(int x, int y, int r, int col) {
    return _flutterxel_core_circb(x, y, r, col);
  }

  late final _flutterxel_core_circbPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Bool Function(ffi.Int32, ffi.Int32, ffi.Int32, ffi.Int32)
        >
      >('flutterxel_core_circb');
  late final _flutterxel_core_circb = _flutterxel_core_circbPtr
      .asFunction<bool Function(int, int, int, int)>();

  bool flutterxel_core_elli(int x, int y, int w, int h, int col) {
    return _flutterxel_core_elli(x, y, w, h, col);
  }

  late final _flutterxel_core_elliPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Bool Function(
            ffi.Int32,
            ffi.Int32,
            ffi.Int32,
            ffi.Int32,
            ffi.Int32,
          )
        >
      >('flutterxel_core_elli');
  late final _flutterxel_core_elli = _flutterxel_core_elliPtr
      .asFunction<bool Function(int, int, int, int, int)>();

  bool flutterxel_core_ellib(int x, int y, int w, int h, int col) {
    return _flutterxel_core_ellib(x, y, w, h, col);
  }

  late final _flutterxel_core_ellibPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Bool Function(
            ffi.Int32,
            ffi.Int32,
            ffi.Int32,
            ffi.Int32,
            ffi.Int32,
          )
        >
      >('flutterxel_core_ellib');
  late final _flutterxel_core_ellib = _flutterxel_core_ellibPtr
      .asFunction<bool Function(int, int, int, int, int)>();

  bool flutterxel_core_tri(
    int x1,
    int y1,
    int x2,
    int y2,
    int x3,
    int y3,
    int col,
  ) {
    return _flutterxel_core_tri(x1, y1, x2, y2, x3, y3, col);
  }

  late final _flutterxel_core_triPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Bool Function(
            ffi.Int32,
            ffi.Int32,
            ffi.Int32,
            ffi.Int32,
            ffi.Int32,
            ffi.Int32,
            ffi.Int32,
          )
        >
      >('flutterxel_core_tri');
  late final _flutterxel_core_tri = _flutterxel_core_triPtr
      .asFunction<bool Function(int, int, int, int, int, int, int)>();

  bool flutterxel_core_trib(
    int x1,
    int y1,
    int x2,
    int y2,
    int x3,
    int y3,
    int col,
  ) {
    return _flutterxel_core_trib(x1, y1, x2, y2, x3, y3, col);
  }

  late final _flutterxel_core_tribPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Bool Function(
            ffi.Int32,
            ffi.Int32,
            ffi.Int32,
            ffi.Int32,
            ffi.Int32,
            ffi.Int32,
            ffi.Int32,
          )
        >
      >('flutterxel_core_trib');
  late final _flutterxel_core_trib = _flutterxel_core_tribPtr
      .asFunction<bool Function(int, int, int, int, int, int, int)>();

  bool flutterxel_core_fill(int x, int y, int col) {
    return _flutterxel_core_fill(x, y, col);
  }

  late final _flutterxel_core_fillPtr =
      _lookup<
        ffi.NativeFunction<ffi.Bool Function(ffi.Int32, ffi.Int32, ffi.Int32)>
      >('flutterxel_core_fill');
  late final _flutterxel_core_fill = _flutterxel_core_fillPtr
      .asFunction<bool Function(int, int, int)>();

  bool flutterxel_core_text(int x, int y, ffi.Pointer<ffi.Char> text, int col) {
    return _flutterxel_core_text(x, y, text, col);
  }

  late final _flutterxel_core_textPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Bool Function(
            ffi.Int32,
            ffi.Int32,
            ffi.Pointer<ffi.Char>,
            ffi.Int32,
          )
        >
      >('flutterxel_core_text');
  late final _flutterxel_core_text = _flutterxel_core_textPtr
      .asFunction<bool Function(int, int, ffi.Pointer<ffi.Char>, int)>();

  bool flutterxel_core_bltm(
    double x,
    double y,
    int tm,
    double u,
    double v,
    double w,
    double h,
    int colkey,
  ) {
    return _flutterxel_core_bltm(x, y, tm, u, v, w, h, colkey);
  }

  late final _flutterxel_core_bltmPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Bool Function(
            ffi.Double,
            ffi.Double,
            ffi.Int32,
            ffi.Double,
            ffi.Double,
            ffi.Double,
            ffi.Double,
            ffi.Int32,
          )
        >
      >('flutterxel_core_bltm');
  late final _flutterxel_core_bltm = _flutterxel_core_bltmPtr
      .asFunction<
        bool Function(double, double, int, double, double, double, double, int)
      >();

  bool flutterxel_core_blt(
    double x,
    double y,
    int img,
    double u,
    double v,
    double w,
    double h,
    int colkey,
    double rotate,
    double scale,
  ) {
    return _flutterxel_core_blt(x, y, img, u, v, w, h, colkey, rotate, scale);
  }

  late final _flutterxel_core_bltPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Bool Function(
            ffi.Double,
            ffi.Double,
            ffi.Int32,
            ffi.Double,
            ffi.Double,
            ffi.Double,
            ffi.Double,
            ffi.Int32,
            ffi.Double,
            ffi.Double,
          )
        >
      >('flutterxel_core_blt');
  late final _flutterxel_core_blt = _flutterxel_core_bltPtr
      .asFunction<
        bool Function(
          double,
          double,
          int,
          double,
          double,
          double,
          double,
          int,
          double,
          double,
        )
      >();

  bool flutterxel_core_play(
    int ch,
    int snd_kind,
    int snd_value,
    ffi.Pointer<ffi.Int32> snd_sequence_ptr,
    int snd_sequence_len,
    ffi.Pointer<ffi.Char> snd_string,
    double sec,
    int loop,
    int resume,
  ) {
    return _flutterxel_core_play(
      ch,
      snd_kind,
      snd_value,
      snd_sequence_ptr,
      snd_sequence_len,
      snd_string,
      sec,
      loop,
      resume,
    );
  }

  late final _flutterxel_core_playPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Bool Function(
            ffi.Int32,
            ffi.Int32,
            ffi.Int32,
            ffi.Pointer<ffi.Int32>,
            ffi.Size,
            ffi.Pointer<ffi.Char>,
            ffi.Double,
            ffi.Int8,
            ffi.Int8,
          )
        >
      >('flutterxel_core_play');
  late final _flutterxel_core_play = _flutterxel_core_playPtr
      .asFunction<
        bool Function(
          int,
          int,
          int,
          ffi.Pointer<ffi.Int32>,
          int,
          ffi.Pointer<ffi.Char>,
          double,
          int,
          int,
        )
      >();

  bool flutterxel_core_playm(int msc, bool loop) {
    return _flutterxel_core_playm(msc, loop);
  }

  late final _flutterxel_core_playmPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Int32, ffi.Bool)>>(
        'flutterxel_core_playm',
      );
  late final _flutterxel_core_playm = _flutterxel_core_playmPtr
      .asFunction<bool Function(int, bool)>();

  bool flutterxel_core_stop(int ch) {
    return _flutterxel_core_stop(ch);
  }

  late final _flutterxel_core_stopPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Int32)>>(
        'flutterxel_core_stop',
      );
  late final _flutterxel_core_stop = _flutterxel_core_stopPtr
      .asFunction<bool Function(int)>();

  bool flutterxel_core_is_channel_playing(int ch) {
    return _flutterxel_core_is_channel_playing(ch);
  }

  late final _flutterxel_core_is_channel_playingPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Int32)>>(
        'flutterxel_core_is_channel_playing',
      );
  late final _flutterxel_core_is_channel_playing =
      _flutterxel_core_is_channel_playingPtr.asFunction<bool Function(int)>();

  bool flutterxel_core_play_pos(
    int ch,
    ffi.Pointer<ffi.Int32> snd,
    ffi.Pointer<ffi.Double> pos,
  ) {
    return _flutterxel_core_play_pos(ch, snd, pos);
  }

  late final _flutterxel_core_play_posPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Bool Function(
            ffi.Int32,
            ffi.Pointer<ffi.Int32>,
            ffi.Pointer<ffi.Double>,
          )
        >
      >('flutterxel_core_play_pos');
  late final _flutterxel_core_play_pos = _flutterxel_core_play_posPtr
      .asFunction<
        bool Function(int, ffi.Pointer<ffi.Int32>, ffi.Pointer<ffi.Double>)
      >();

  bool flutterxel_core_rseed(int seed) {
    return _flutterxel_core_rseed(seed);
  }

  late final _flutterxel_core_rseedPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Int32)>>(
        'flutterxel_core_rseed',
      );
  late final _flutterxel_core_rseed = _flutterxel_core_rseedPtr
      .asFunction<bool Function(int)>();

  int flutterxel_core_rndi(int a, int b) {
    return _flutterxel_core_rndi(a, b);
  }

  late final _flutterxel_core_rndiPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Int32, ffi.Int32)>>(
        'flutterxel_core_rndi',
      );
  late final _flutterxel_core_rndi = _flutterxel_core_rndiPtr
      .asFunction<int Function(int, int)>();

  double flutterxel_core_rndf(double a, double b) {
    return _flutterxel_core_rndf(a, b);
  }

  late final _flutterxel_core_rndfPtr =
      _lookup<ffi.NativeFunction<ffi.Double Function(ffi.Double, ffi.Double)>>(
        'flutterxel_core_rndf',
      );
  late final _flutterxel_core_rndf = _flutterxel_core_rndfPtr
      .asFunction<double Function(double, double)>();

  bool flutterxel_core_nseed(int seed) {
    return _flutterxel_core_nseed(seed);
  }

  late final _flutterxel_core_nseedPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Int32)>>(
        'flutterxel_core_nseed',
      );
  late final _flutterxel_core_nseed = _flutterxel_core_nseedPtr
      .asFunction<bool Function(int)>();

  double flutterxel_core_noise(double x, double y, double z) {
    return _flutterxel_core_noise(x, y, z);
  }

  late final _flutterxel_core_noisePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Double Function(ffi.Double, ffi.Double, ffi.Double)
        >
      >('flutterxel_core_noise');
  late final _flutterxel_core_noise = _flutterxel_core_noisePtr
      .asFunction<double Function(double, double, double)>();

  bool flutterxel_core_load(
    ffi.Pointer<ffi.Char> filename,
    int exclude_images,
    int exclude_tilemaps,
    int exclude_sounds,
    int exclude_musics,
  ) {
    return _flutterxel_core_load(
      filename,
      exclude_images,
      exclude_tilemaps,
      exclude_sounds,
      exclude_musics,
    );
  }
